--- a/src/main/resources/view/ProductView.fxml
+++ b/src/main/resources/view/ProductView.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
@@ -46,31 +48,42 @@
           <Cursor fx:constant="OPEN_HAND" />
         </cursor>
     </Button>
-    <StackPane layoutX="-1.0" layoutY="324.0" prefHeight="278.0" prefWidth="400.0">
-        <VBox alignment="TOP_CENTER" prefHeight="297.0" prefWidth="400.0" spacing="30.0" StackPane.alignment="CENTER">
+    <StackPane layoutX="-1.0" layoutY="298.0" prefHeight="304.0" prefWidth="400.0">
+        <VBox alignment="TOP_CENTER" prefHeight="301.0" prefWidth="400.0" spacing="30.0" StackPane.alignment="CENTER">
             <opaqueInsets>
                 <Insets />
             </opaqueInsets>
-            <Label fx:id="productName" alignment="CENTER" contentDisplay="CENTER" text="Product Name" textAlignment="CENTER">
-                <font>
-                  <Font name="System Bold Italic" size="18.0" />
-                </font>
-            </Label>
-            <Label fx:id="productBarcode" alignment="CENTER" contentDisplay="CENTER" text="Product Barcode" textAlignment="CENTER">
-                <font>
-                    <Font name="System Italic" size="14.0" />
-                </font>
-            </Label>
-            <Label fx:id="productPrice" alignment="CENTER" contentDisplay="CENTER" lineSpacing="40.0" text="Product Price" textAlignment="CENTER">
-                <font>
-                    <Font name="System Italic" size="14.0" />
-                </font>
-            </Label>
-            <Label fx:id="productDescription" alignment="CENTER" contentDisplay="CENTER" lineSpacing="40.0" text="Product Description" textAlignment="CENTER" wrapText="true">
-                <font>
-                    <Font name="System Italic" size="14.0" />
-                </font>
-            </Label>
+            <StackPane prefHeight="230.0" prefWidth="400.0">
+                <VBox alignment="CENTER" prefHeight="209.0" prefWidth="400.0" spacing="20.0">
+                    <TextField fx:id="productNameTextfield" prefWidth="150" maxWidth="150"/>
+                    <Label fx:id="productName" alignment="CENTER" contentDisplay="CENTER" text="Product Name" textAlignment="CENTER">
+                        <font>
+                            <Font name="System Bold Italic" size="18.0" />
+                        </font>
+                    </Label>
+
+                    <TextField fx:id="productBarcodeTextfield" prefWidth="150" maxWidth="150"/>
+                    <Label fx:id="productBarcode" alignment="CENTER" contentDisplay="CENTER" text="Product Barcode" textAlignment="CENTER">
+                        <font>
+                            <Font name="System Italic" size="14.0" />
+                        </font>
+                    </Label>
+
+                    <TextField fx:id="productPriceTextfield" prefWidth="150" maxWidth="150"/>
+                    <Label fx:id="productPrice" alignment="CENTER" contentDisplay="CENTER" lineSpacing="40.0" text="Product Price" textAlignment="CENTER">
+                        <font>
+                            <Font name="System Italic" size="14.0" />
+                        </font>
+                    </Label>
+
+                    <TextArea fx:id="productDescriptionTextarea" prefHeight="100" maxHeight="100" prefWidth="200.0" maxWidth="200" wrapText="true" />
+                    <Label fx:id="productDescription" alignment="CENTER" contentDisplay="CENTER" lineSpacing="40.0" text="Product Description" textAlignment="CENTER" wrapText="true">
+                        <font>
+                            <Font name="System Italic" size="14.0" />
+                        </font>
+                    </Label>
+                </VBox>
+            </StackPane>
          <ButtonBar prefHeight="69.0" prefWidth="400.0">
            <buttons>
              <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonAction" prefHeight="29.0" style="-fx-background-color: #7EF59A;" text="Edit">
