--- a/src/main/resources/view/AddProduct.fxml
+++ b/src/main/resources/view/AddProduct.fxml
@@ -36,63 +36,63 @@
          <Font name="System Bold" size="36.0" />
       </font>
    </Label>
-   <Label layoutX="138.0" layoutY="102.0" text="Product Name">
+   <Label layoutX="292.0" layoutY="179.0" text="Product Name">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <TextField fx:id="productPrice" layoutX="44.0" layoutY="259.0" prefHeight="38.0" prefWidth="270.0">
+   <TextField fx:id="productPrice" layoutX="44.0" layoutY="277.0" prefHeight="38.0" prefWidth="270.0">
       <font>
          <Font size="16.0" />
       </font>
    </TextField>
-   <Label layoutX="446.0" layoutY="102.0" text="Product Barcode">
+   <Label layoutX="286.0" layoutY="108.0" text="Product Barcode">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <Label layoutX="138.0" layoutY="240.0" text="Product Price">
+   <Label layoutX="138.0" layoutY="250.0" text="Product Price">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <Label layoutX="445.0" layoutY="240.0" text="Product Quantity">
+   <Label layoutX="453.0" layoutY="250.0" text="Product Quantity">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <TextField fx:id="productQuantity" layoutX="366.0" layoutY="259.0" prefHeight="37.0" prefWidth="264.0">
+   <TextField fx:id="productQuantity" layoutX="366.0" layoutY="277.0" prefHeight="37.0" prefWidth="264.0">
       <font>
          <Font size="16.0" />
       </font>
    </TextField>
-   <TextField fx:id="productName" layoutX="44.0" layoutY="122.0" prefHeight="38.0" prefWidth="270.0">
+   <TextField fx:id="productName" layoutX="198.0" layoutY="199.0" prefHeight="38.0" prefWidth="270.0">
       <font>
          <Font size="16.0" />
       </font>
    </TextField>
-   <TextField fx:id="productBarcode" layoutX="363.0" layoutY="122.0" prefHeight="38.0" prefWidth="270.0">
+   <TextField fx:id="productBarcode" layoutX="198.0" layoutY="128.0" prefHeight="38.0" prefWidth="270.0">
       <font>
          <Font size="16.0" />
       </font>
    </TextField>
-   <TextArea fx:id="productDescription" layoutX="224.0" layoutY="341.0" prefHeight="123.0" prefWidth="219.0" />
-   <Label layoutX="279.0" layoutY="321.0" text="Product Description">
+   <TextArea fx:id="productDescription" layoutX="231.0" layoutY="365.0" prefHeight="123.0" prefWidth="219.0" />
+   <Label layoutX="279.0" layoutY="334.0" text="Product Description">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <TextField fx:id="productUrl" layoutX="205.0" layoutY="505.0" prefHeight="38.0" prefWidth="270.0">
+   <TextField fx:id="productUrl" layoutX="205.0" layoutY="535.0" prefHeight="38.0" prefWidth="270.0">
       <font>
          <Font size="16.0" />
       </font>
    </TextField>
-   <Label layoutX="281.0" layoutY="485.0" text="Product Image URL">
+   <Label layoutX="281.0" layoutY="515.0" text="Product Image URL">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <Button fx:id="addProduct" layoutX="30.0" layoutY="594.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="614.0" text="Add Product">
+   <Button fx:id="addProduct" layoutX="30.0" layoutY="594.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="614.0" style="-fx-background-color: #7EF59A;" text="Add Product">
       <font>
          <Font name="System Bold" size="12.0" />
       </font>
